[gd_scene load_steps=22 format=3 uid="uid://13afrtcou3ff"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cgi7dh1nunhey" path="res://resources/game_icons/Dark_Souls_Icon.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dfwd2bt2taq4p" path="res://resources/game_icons/Dark_Souls_Icon_Hovered.png" id="5"]
[ext_resource type="Texture2D" uid="uid://co31br56n5pk" path="res://resources/game_icons/Dark_Souls_II_Icon.png" id="6"]
[ext_resource type="Texture2D" uid="uid://2rt4jwhu3hdq" path="res://resources/game_icons/Dark_Souls_II_Icon_Hovered.png" id="7"]
[ext_resource type="Texture2D" uid="uid://c2s2bc3lwtnyp" path="res://resources/game_icons/Dark_Souls_III_Icon.png" id="8"]
[ext_resource type="Texture2D" uid="uid://dkkxvsrt1myga" path="res://resources/game_icons/Dark_Souls_III_Icon_Hovered.png" id="9"]
[ext_resource type="Texture2D" uid="uid://b7pw7pyvdwqn" path="res://resources/game_icons/Path_Of_Exile_Icon.png" id="10"]
[ext_resource type="Texture2D" uid="uid://pn6766jmefnv" path="res://resources/game_icons/Path_Of_Exile_Icon_Hovered.png" id="11"]
[ext_resource type="Texture2D" uid="uid://clh3ue15do4ij" path="res://resources/game_icons/TESV_Skyrim_Icon.png" id="12"]
[ext_resource type="Texture2D" uid="uid://c53m44f3n16j5" path="res://resources/game_icons/TESV_Skyrim_Icon_Hovered.png" id="13"]
[ext_resource type="Texture2D" uid="uid://clmshx4t843ws" path="res://resources/game_icons/Blank_Icon.png" id="14"]
[ext_resource type="Texture2D" uid="uid://d3p54i4squvxo" path="res://resources/game_icons/Blank_Icon_Hovered.png" id="15"]
[ext_resource type="Texture2D" uid="uid://g35vnu3b04hb" path="res://resources/game_icons/Breath_of_the_Wild_Icon.png" id="16"]
[ext_resource type="Texture2D" uid="uid://dlrm1gkmsi44m" path="res://resources/game_icons/Breath_of_the_Wild_Icon_Hovered.png" id="17"]
[ext_resource type="Texture2D" uid="uid://c4l7x1ohfro2r" path="res://resources/game_icons/World_of_Warcraft_Icon.png" id="18"]
[ext_resource type="Texture2D" uid="uid://c7x67o2spmmkb" path="res://resources/game_icons/World_of_Warcraft_Icon_Hovered.png" id="19"]

[sub_resource type="LabelSettings" id="LabelSettings_wwoqa"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_jo3vm"]
font_size = 14
font_color = Color(0.654902, 0.654902, 0.654902, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wl4d8"]
font_size = 12
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_x5mrv"]
font_size = 12
font_color = Color(0.568627, 0.568627, 0.568627, 0.545098)

[node name="root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ActuallyFunBingo"
label_settings = SubResource("LabelSettings_wwoqa")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "A bingo application for games."
label_settings = SubResource("LabelSettings_jo3vm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Games" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Row 1" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Games"]
layout_mode = 2
alignment = 1

[node name="Dark Souls" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Games/Row 1"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/Games/Row 1/Dark Souls"]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
texture_normal = ExtResource("4")
texture_hover = ExtResource("5")
texture_disabled = ExtResource("5")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Games/Row 1/Dark Souls"]
layout_mode = 2
text = "Dark Souls"
label_settings = SubResource("LabelSettings_wl4d8")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Dark Souls II" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Games/Row 1"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/Games/Row 1/Dark Souls II"]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
texture_normal = ExtResource("6")
texture_hover = ExtResource("7")
texture_disabled = ExtResource("7")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Games/Row 1/Dark Souls II"]
layout_mode = 2
text = "Dark Souls II"
label_settings = SubResource("LabelSettings_wl4d8")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Dark Souls III" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Games/Row 1"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/Games/Row 1/Dark Souls III"]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
texture_normal = ExtResource("8")
texture_hover = ExtResource("9")
texture_disabled = ExtResource("9")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Games/Row 1/Dark Souls III"]
layout_mode = 2
text = "Dark Souls III"
label_settings = SubResource("LabelSettings_wl4d8")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Path of Exile" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Games/Row 1"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/Games/Row 1/Path of Exile"]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
texture_normal = ExtResource("10")
texture_hover = ExtResource("11")
texture_disabled = ExtResource("11")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Games/Row 1/Path of Exile"]
layout_mode = 2
text = "Path of Exile"
label_settings = SubResource("LabelSettings_wl4d8")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TESV Skyrim" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Games/Row 1"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/Games/Row 1/TESV Skyrim"]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
texture_normal = ExtResource("12")
texture_hover = ExtResource("13")
texture_disabled = ExtResource("13")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Games/Row 1/TESV Skyrim"]
layout_mode = 2
text = "TES V: Skyrim"
label_settings = SubResource("LabelSettings_wl4d8")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Row 2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Games"]
layout_mode = 2
alignment = 1

[node name="Super Mario 64" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Games/Row 2"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/Games/Row 2/Super Mario 64"]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
texture_normal = ExtResource("14")
texture_disabled = ExtResource("15")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Games/Row 2/Super Mario 64"]
layout_mode = 2
text = "Super Mario 64"
label_settings = SubResource("LabelSettings_wl4d8")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Breath of the Wild" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Games/Row 2"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/Games/Row 2/Breath of the Wild"]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
texture_normal = ExtResource("16")
texture_hover = ExtResource("17")
texture_disabled = ExtResource("17")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Games/Row 2/Breath of the Wild"]
layout_mode = 2
text = "TLoZ: Breath of the Wild"
label_settings = SubResource("LabelSettings_wl4d8")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Ocarina of Time" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Games/Row 2"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/Games/Row 2/Ocarina of Time"]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
texture_normal = ExtResource("14")
texture_hover = ExtResource("15")
texture_disabled = ExtResource("15")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Games/Row 2/Ocarina of Time"]
layout_mode = 2
text = "TLoZ: Ocarina of Time"
label_settings = SubResource("LabelSettings_wl4d8")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="World of Warcraft" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Games/Row 2"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/Games/Row 2/World of Warcraft"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("18")
texture_hover = ExtResource("19")
texture_disabled = ExtResource("19")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Games/Row 2/World of Warcraft"]
layout_mode = 2
text = "World of Warcraft"
label_settings = SubResource("LabelSettings_wl4d8")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Controls" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
text = "Controls"

[node name="About" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
text = "About"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
text = "Quit"

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -20.0
offset_right = 43.0
grow_vertical = 0
text = "version"
label_settings = SubResource("LabelSettings_x5mrv")
vertical_alignment = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/Games/Row 1/Dark Souls/TextureButton" to="." method="game_picked"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Games/Row 1/Dark Souls II/TextureButton" to="." method="game_picked"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Games/Row 1/Dark Souls III/TextureButton" to="." method="game_picked"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Games/Row 1/Path of Exile/TextureButton" to="." method="game_picked"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Games/Row 1/TESV Skyrim/TextureButton" to="." method="game_picked"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Games/Row 2/Breath of the Wild/TextureButton" to="." method="game_picked"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Games/Row 2/World of Warcraft/TextureButton" to="." method="game_picked" binds= ["World of Warcraft"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
